@@ -1,3 +1,7 @@
+2007-04-24  Matthias Wimmer  <m@tthias.eu>
+
+    * util/pool.c: do not retry forever to allocate memory
+
 2007-02-03  Matthias Wimmer  <m@tthias.eu>
 
     * jadc2s.c: fixing SASL PLAIN, and authorization id passing
